Added HCL IAST code